--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     font-family: "Trebuchet MS"; 
 }
 
-.ios h1,h4 {
+.ios h1,h3 {
     zoom: 3;
 }
 .ios select,label,input,button {
@@ -14,14 +14,19 @@ html {
 .ios table {
     zoom: 2;
 }
+.ios #pac-input {
+    width: 200px;
+}
+
+.h1 {
+    padding-left: 100px;
+}
 
 
 
 
 
-
-
-h4 {
+h3 {
     max-width: fit-content;
     margin-top: -20px
 }
