--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
-    font-family: "Trebuchet MS"; 
+    font-family: "Trebuchet MS";
+    margin-left: 60%;
 }
 
 
@@ -19,27 +20,22 @@ html {
     width: 200px;
 }
 
-.android h1,h3,h5 {
-    zoom: 3;
-}
-.android select,label,input,button {
-    zoom: 2;
-}
-.android label {
-    zoom: 3;
-}
-.android table {
-    zoom: 2;
-}
-.android #pac-input {
-    width: 200px;
-}
+
 .dark #img {
     filter: invert(100%);
 }
 
-.web h3,h5, #pac-input, button, label {
+.web h1,h3,h5, button, label {
     zoom: 1;
+    margin-left: 30%;
+}
+.web #pac-input {
+    zoom: 1;
+    margin-left: 3%;
+}
+.web #all {
+    zoom: 1;
+    margin-left: 3%;
 }
 
 #img {
@@ -54,7 +50,7 @@ html {
 h3 {
     max-width: fit-content;
 }
-h5 {
+h4 {
     max-width: fit-content;
     margin-left: 60%;
     margin-top: -10px
@@ -148,8 +144,12 @@ td:last-child {
   * that contains the map. 
   */
 #map {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
+}
+#mapa {
+    margin-top: 10px;
+
 }
 
 /* 
@@ -196,7 +196,7 @@ body {
   margin-bottom: 3px;
   padding: 2 11px 0 13px;
   text-overflow: ellipsis;
-  width: 300px;
+  width: 200px;
 }
 
 
