--- a/style.css
+++ b/style.css
@@ -7,8 +7,15 @@ html {
 .ios h1 {
     zoom: 3;
 }
-.ios h3,h4 {
-    zoom: 4;
+.ios h3 {
+    margin-left: 5%;
+    zoom: 3;
+    font-size: 18px;
+}
+.ios h4 {
+    margin-left: 40%;
+    zoom: 3;
+    font-size: 18px;
 }
 .ios select,label,input,button {
     zoom: 2;
