--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ html {
 }
 .ios h3 {
     margin-left: 5%;
+    margin-top: -5%;
     zoom: 3;
-    font-size: 20px;
+    font-size: 15px;
 }
 .ios h4 {
     margin-left: 60%;
