--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ html {
     zoom: 4;
     font-size: 10px;
 }
-.ios select,label,input,button {
+.ios select,input,button {
     zoom: 2;
 }
 .ios label {
     zoom: 3;
+    margin-left: 5%;
 }
 .ios table {
     zoom: 2;
