--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
     margin-left: 60%;
 }
 
+ 
 
 .ios h1 {
     zoom: 3;
@@ -18,11 +19,15 @@ html {
     zoom: 4;
     font-size: 10px;
 }
-.ios select,input,button {
+.ios select,input, #insert {
     zoom: 2;
 }
 .ios label {
     zoom: 3;
+    margin-left: 5%;
+}
+.ios #all{
+    zoom: 2;
     margin-left: 5%;
 }
 .ios table {
