--- a/style.css
+++ b/style.css
@@ -19,16 +19,19 @@ html {
     zoom: 4;
     font-size: 10px;
 }
-.ios select,input, #insert {
+.ios select,input {
     zoom: 2;
 }
 .ios label {
-    zoom: 3;
+    zoom: 3.5;
     margin-left: 5%;
 }
 .ios #all{
-    zoom: 2;
+    zoom: 2.5;
     margin-left: 5%;
+}
+.ios #insert{
+    zoom: 2.5;
 }
 .ios table {
     zoom: 2;
