--- a/style.css
+++ b/style.css
@@ -45,6 +45,46 @@ html {
 }
 
 
+.android h1 {
+    zoom: 3;
+}
+.android h3 {
+    margin-left: 5%;
+    margin-top: -5%;
+    zoom: 3;
+    font-size: 15px;
+}
+.android h4 {
+    margin-left: 60%;
+    zoom: 4;
+    font-size: 10px;
+}
+.android select,input {
+    zoom: 2;
+}
+.android label {
+    zoom: 3.5;
+    font-size: 15px;
+    margin-left: 5%;
+}
+.android #label {
+    font-size: 18px;
+}
+.android #all{
+    zoom: 2.5;
+    margin-left: 5%;
+}
+.android #insert{
+    zoom: 2.5;
+}
+.android table {
+    zoom: 2;
+}
+.android #pac-input {
+    width: 200px;
+}
+
+
 .dark #img {
     filter: invert(100%);
 }
