--- a/style.css
+++ b/style.css
@@ -4,84 +4,56 @@ html {
 }
 
  
-
-.ios h1 {
+.mobile #label_filtro {
+    margin-left: 5%;
+}
+.mobile h1 {
     zoom: 3;
 }
-.ios h3 {
+.mobile h3 {
     margin-left: 5%;
     margin-top: -5%;
     zoom: 3;
     font-size: 18px;
 }
-.ios h4 {
+/* .mobile h4 {
     margin-left: 60%;
     zoom: 4;
     font-size: 10px;
-}
-.ios select,input {
+} */
+.mobile input {
     zoom: 2;
 }
-.ios label {
+
+.mobile select {
+    zoom: 2;
+    height: 25px;
+    padding-top: 1.3%;
+
+}
+button {
+    padding: 5px;
+    margin-left: 40px;
+}
+.mobile label {
     zoom: 3.5;
     font-size: 15px;
     margin-left: 5%;
 }
-.ios #label {
+.mobile #label {
     font-size: 18px;
 }
-.ios #all{
-    zoom: 2.5;
-    margin-left: 5%;
-}
-.ios #insert{
+.mobile button{
     zoom: 2.5;
 }
-.ios table {
+.mobile #insert{
+    zoom: 2.5;
+}
+.mobile table {
     zoom: 2;
 
 }
-.ios .pac-container.pac-logo.hdpi {
-    zoom: 2;
-}
-
-
-.android h1 {
-    zoom: 3;
-}
-.android h3 {
-    margin-left: 5%;
-    margin-top: -5%;
-    zoom: 3;
-    font-size: 15px;
-}
-.android h4 {
-    margin-left: 60%;
-    zoom: 4;
-    font-size: 10px;
-}
-.android select,input {
-    zoom: 2;
-}
-.android label {
-    zoom: 3.5;
-    font-size: 15px;
-    margin-left: 5%;
-}
-.android #label {
-    font-size: 18px;
-}
-.android #all{
-    zoom: 2.5;
-    margin-left: 5%;
-}
-.android #insert{
-    zoom: 2.5;
-}
-.android table {
-    zoom: 2;
-}
-.android .pac-container.pac-logo.hdpi {
+.mobile .pac-container.pac-logo.hdpi {
     zoom: 2;
 }
 
@@ -110,18 +82,24 @@ html {
     width: 35px;
 }
 
-.h1 {
+/* .h1 {
     padding-left: 120px;
-}
-h3 {
+} */
+#label_filtro, #h1{
+    margin-left: 35%;
     max-width: fit-content;
 }
-h4 {
+/* h4 {
     max-width: fit-content;
     margin-left: 60%;
     margin-top: -10px
+} */
+select {
+    height: 20px;
 }
-
+button {
+    padding: 5px;
+}
 form {
     font-size: 18px;
     width: 100%;
@@ -193,10 +171,7 @@ td:last-child {
     padding-bottom: 80px;
 }
 
-/* #resultado2 .tr {
-    height: 10px;
-    overflow-y: scroll;
-} */
+
 
 
 
