--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ html {
 .mobile h1 {
     zoom: 3;
 }
+.mobile h7 {
+    zoom: 3;
+}
+.mobile .dropdown {
+    margin-left: 3%;
+}
 .mobile h3 {
     margin-left: 5%;
     margin-top: -5%;
@@ -249,4 +255,38 @@ body {
 }
 #place-address {
     color: black;
+}
+
+
+
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    color: black;
+    padding-top: 90px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.5); 
+}
+    
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    /* margin: auto; */
+    margin-left: 25%;
+    margin-top: 420px;
+    padding: 5px;
+    border: 2px solid red;
+    width: 60%;
+}
+
+.hand-pointer {
+    cursor: pointer;
 }
