--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
     zoom: 3;
 }
 .mobile h7 {
-    zoom: 3;
+    zoom: 2;
 }
 .mobile .dropdown {
     margin-left: 3%;
@@ -22,11 +22,11 @@ html {
     zoom: 3;
     font-size: 18px;
 }
-/* .mobile h4 {
+.mobile h4 {
     margin-left: 60%;
     zoom: 4;
     font-size: 10px;
-} */
+}
 .mobile input {
     zoom: 2;
 }
