--- a/style.css
+++ b/style.css
@@ -23,9 +23,10 @@ html {
     font-size: 18px;
 }
 .mobile h4 {
-    margin-left: 60%;
-    zoom: 4;
-    font-size: 10px;
+    /* margin-left: 10%; */
+    zoom: 2;
+    width: 100%;
+    /* font-size: 5px; */
 }
 .mobile input {
     zoom: 2;
