--- a/style.css
+++ b/style.css
@@ -23,9 +23,8 @@ html {
     font-size: 18px;
 }
 .mobile h4 {
-    /* margin-left: 10%; */
+    margin-left: 10%;
     zoom: 2;
-    /* font-size: 5px; */
 }
 .mobile input {
     zoom: 2;
@@ -71,7 +70,7 @@ button {
     filter: invert(100%);
 }
 
-.web h1,h3,h4, button, label {
+.web h1,h3, button, label {
     zoom: 1;
     margin-left: 30%;
 }
