--- a/style.css
+++ b/style.css
@@ -305,3 +305,33 @@ body {
 .hand-pointer {
     cursor: pointer;
 }
+
+
+
+
+#info_modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    color: black;
+    padding-top: 90px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.5); 
+}
+    
+/* Modal Content */
+.modal-content2{
+    background-color: #fefefe;
+    font-size: 12px;
+    /* margin: auto; */
+    margin-left: 25%;
+    margin-top: 20px;
+    padding: 5px;
+    border: 2px solid red;
+    width: 60%;
+}
