--- a/style.css
+++ b/style.css
@@ -47,12 +47,18 @@ html {
 }
 
 
+button {
+    padding: 5px;
+}
 .mobile label {
     zoom: 3.5;
     font-size: 15px;
 }
 .mobile #label {
     font-size: 18px;
+}
+.mobile #resultado {
+    margin-right: 10%;
 }
 .mobile button{
     zoom: 2.5;
@@ -65,6 +71,15 @@ html {
 }
 .mobile .pac-container.pac-logo.hdpi {
     zoom: 2;
+}
+.mobile #container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.mobile button {
+    margin: 10px; /* Add some margin between the buttons */
 }
 
 
