--- a/style.css
+++ b/style.css
@@ -79,8 +79,35 @@ html {
 }
 .web h1,h3,h4,button,#form,#insert,#resultado,#botones {
     text-align: center;
-    
 }
+
+
+.web h6 {
+    font-size: 18px;
+    margin-top: 10px; 
+    margin-bottom: 15px;
+}
+#mensajeForm {
+    position: relative;
+    bottom: 0;
+    margin-top: 500px;
+    padding-bottom: 100px;
+    padding-left: 5%;
+} 
+.web p {
+    font-size: 12px;
+}
+a {
+    text-decoration: none;
+    color: #14202b;
+}
+.dark a {
+    text-decoration: none;
+    color: white;
+}
+
+
+
 .web #container {
     margin: 0 auto;
     display: flex;
