--- a/style.css
+++ b/style.css
@@ -81,7 +81,11 @@ html {
     text-align: center;
 }
 
-
+.mobile h6 {
+    font-size: 25px;
+    margin-top: 10px; 
+    margin-bottom: 15px;
+}
 .web h6 {
     font-size: 18px;
     margin-top: 10px; 
